On Job Events page, Event and Host columns now have a min-width css setting to help prevent 'jump' when collapsing/expanding children.  Fixes the jump, but sort of wrecks the TB's responsive layout on small screens.  May have to circle back and add media query at some point.

--- a/ansibleworks/ui/static/css/ansible-ui.css
+++ b/ansibleworks/ui/static/css/ansible-ui.css
@@ -450,3 +450,7 @@
  #event_display-header {
     min-width: 250px;
  }
+
+ #job-event-host-header {
+    min-width: 200px;
+ }
